--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -96,9 +96,8 @@
                 android:layout_below="@+id/txtCat"
                 android:layout_centerHorizontal="true" />
 
-            <include
+            <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/layoutOffer"
-                layout="@layout/offer_scroll"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/catogery" />
@@ -123,7 +122,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/txtTop"
-                android:orientation="horizontal"/>
+                android:orientation="horizontal" />
 
             <TextView
                 android:id="@+id/txtRec"
@@ -140,9 +139,8 @@
                 android:textSize="17sp"
                 android:textStyle="bold" />
 
-            <include
+            <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recommand"
-                layout="@layout/recommandation"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/txtRec" />
@@ -162,9 +160,8 @@
                 android:textSize="17sp"
                 android:textStyle="bold" />
 
-            <include
+            <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/popular"
-                layout="@layout/popular_brand"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/txtBrand" />
