--- a/app/src/main/res/layout/popular_brand.xml
+++ b/app/src/main/res/layout/popular_brand.xml
@@ -1,218 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/white">
+    android:layout_width="wrap_content"
+    android:background="@color/white"
+    android:layout_height="wrap_content"
+    android:layout_margin="12dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <HorizontalScrollView
-        android:id="@+id/hr3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:fadeScrollbars="true"
-        android:scrollIndicators="none"
-        android:scrollbarSize="0dp"
-        tools:ignore="SpeakableTextPresentCheck">
+<!--    <HorizontalScrollView-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:background="@color/white"-->
+<!--        android:fadeScrollbars="true"-->
+<!--        android:scrollIndicators="none"-->
+<!--        android:scrollbarSize="0dp"-->
+<!--        tools:ignore="SpeakableTextPresentCheck">-->
 
-        <GridLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:rowCount="1"
-            android:columnCount="1">
+<!--        <LinearLayout-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:orientation="horizontal"-->
+<!--            android:background="@color/white">-->
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/white">
+            <androidx.cardview.widget.CardView
+                android:layout_width="80dp"
+                android:layout_height="100dp"
+                android:background="@color/white"
+                android:elevation="5dp"
+                app:cardCornerRadius="8dp"
+                app:cardElevation="1dp">
 
-                <androidx.cardview.widget.CardView
+                <ImageView
+                    android:id="@+id/imgPick"
                     android:layout_width="80dp"
                     android:layout_height="100dp"
-                    android:layout_margin="12dp"
-                    android:background="@color/white"
-                    android:elevation="5dp"
-                    app:cardCornerRadius="8dp"
-                    app:cardElevation="2dp">
+                    android:scaleType="fitXY"
+                    android:src="@drawable/food1" />
+            </androidx.cardview.widget.CardView>
 
-                    <ImageView
-                        android:id="@+id/pick1"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/food1" />
-                </androidx.cardview.widget.CardView>
+<!--        </LinearLayout>-->
 
-                <androidx.cardview.widget.CardView
-                    android:layout_width="80dp"
-                    android:layout_height="100dp"
-                    android:layout_margin="12dp"
-                    android:background="@color/white"
-                    android:elevation="5dp"
-                    app:cardCornerRadius="8dp"
-                    app:cardElevation="2dp">
+<!--    </HorizontalScrollView>-->
 
-                    <ImageView
-                        android:id="@+id/pick2"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/food1" />
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                    android:layout_width="80dp"
-                    android:layout_height="100dp"
-                    android:layout_margin="12dp"
-                    android:background="@color/white"
-                    android:elevation="5dp"
-                    app:cardCornerRadius="8dp"
-                    app:cardElevation="2dp">
-
-                    <ImageView
-                        android:id="@+id/pick3"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/food1" />
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                    android:layout_width="80dp"
-                    android:layout_height="100dp"
-                    android:layout_margin="12dp"
-                    android:background="@color/white"
-                    android:elevation="5dp"
-                    app:cardCornerRadius="8dp"
-                    app:cardElevation="2dp">
-
-                    <ImageView
-                        android:id="@+id/pick4"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/food1" />
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                    android:layout_width="80dp"
-                    android:layout_height="100dp"
-                    android:layout_margin="12dp"
-                    android:background="@color/white"
-                    android:elevation="5dp"
-                    app:cardCornerRadius="8dp"
-                    app:cardElevation="2dp">
-
-                    <ImageView
-                        android:id="@+id/pick5"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/food1" />
-                </androidx.cardview.widget.CardView>
-
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/white">
-
-                <androidx.cardview.widget.CardView
-                    android:layout_width="80dp"
-                    android:layout_height="100dp"
-                    android:layout_margin="12dp"
-                    android:background="@color/white"
-                    android:elevation="5dp"
-                    app:cardCornerRadius="8dp"
-                    app:cardElevation="2dp">
-
-                    <ImageView
-                        android:id="@+id/pick10"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:background="@color/white"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/food1" />
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                    android:layout_width="80dp"
-                    android:layout_height="100dp"
-                    android:layout_margin="12dp"
-                    android:background="@color/white"
-                    android:elevation="5dp"
-                    app:cardCornerRadius="8dp"
-                    app:cardElevation="2dp">
-
-                    <ImageView
-                        android:id="@+id/pick6"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:background="@color/white"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/food1" />
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                    android:layout_width="80dp"
-                    android:layout_height="100dp"
-                    android:layout_margin="12dp"
-                    android:background="@color/white"
-                    android:elevation="5dp"
-                    app:cardCornerRadius="8dp"
-                    app:cardElevation="2dp">
-
-                    <ImageView
-                        android:id="@+id/pick7"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:background="@color/white"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/food1" />
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                    android:layout_width="80dp"
-                    android:layout_height="100dp"
-                    android:layout_margin="12dp"
-                    android:background="@color/white"
-                    android:elevation="5dp"
-                    app:cardCornerRadius="8dp"
-                    app:cardElevation="2dp">
-
-                    <ImageView
-                        android:id="@+id/pick8"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:background="@color/white"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/food1" />
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                    android:layout_width="80dp"
-                    android:layout_height="100dp"
-                    android:layout_margin="12dp"
-                    android:background="@color/white"
-                    android:elevation="5dp"
-                    app:cardCornerRadius="8dp"
-                    app:cardElevation="2dp">
-
-                    <ImageView
-                        android:id="@+id/pick9"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:background="@color/white"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/food1" />
-                </androidx.cardview.widget.CardView>
-
-
-            </LinearLayout>
-        </GridLayout>
-
-    </HorizontalScrollView>
 </RelativeLayout>
