--- a/app/src/main/res/layout/recommandation.xml
+++ b/app/src/main/res/layout/recommandation.xml
@@ -1,191 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <HorizontalScrollView
-        android:id="@+id/hr1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:scrollbarSize="0dp"
-        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck">
-
-        <GridLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:rowCount="1"
-            android:columnCount="1">
-
-            <LinearLayout
-                android:layout_width="wrap_content"
+            <androidx.cardview.widget.CardView
+                android:layout_width="250dp"
                 android:layout_height="150dp"
+                android:layout_margin="12dp"
                 android:background="@color/white"
-                android:orientation="horizontal">
+                android:elevation="5dp"
+                app:cardCornerRadius="8dp"
+                app:cardElevation="1dp">
 
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/offCard1"
+                <ImageView
+                    android:id="@+id/imgPick"
                     android:layout_width="250dp"
-                    android:layout_height="match_parent"
-                    android:layout_margin="16dp"
-                    android:background="@color/black"
-                    android:elevation="8dp"
-                    app:cardBackgroundColor="@color/black"
-                    app:cardCornerRadius="8dp"
-                    app:cardElevation="2dp">
-
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/food1" />
-
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/offCard2"
-                    android:layout_width="250dp"
-                    android:layout_height="match_parent"
-                    android:layout_margin="16dp"
-                    android:background="@color/black"
-                    android:elevation="8dp"
-                    app:cardBackgroundColor="@color/black"
-                    app:cardCornerRadius="8dp"
-                    app:cardElevation="2dp">
-
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/food2" />
-
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/offCard3"
-                    android:layout_width="250dp"
-                    android:layout_height="match_parent"
-                    android:layout_margin="16dp"
-                    android:background="@color/black"
-                    android:elevation="8dp"
-                    app:cardBackgroundColor="@color/black"
-                    app:cardCornerRadius="8dp"
-                    app:cardElevation="2dp">
-
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/food3" />
-
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/offCard4"
-                    android:layout_width="250dp"
-                    android:layout_height="match_parent"
-                    android:layout_margin="16dp"
-                    android:background="@color/black"
-                    android:elevation="8dp"
-                    app:cardBackgroundColor="@color/black"
-                    app:cardCornerRadius="8dp"
-                    app:cardElevation="2dp">
-
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/food4" />
-
-                </androidx.cardview.widget.CardView>
-
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="150dp"
-                android:background="@color/white"
-                android:orientation="horizontal">
-
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/offCard5"
-                    android:layout_width="250dp"
-                    android:layout_height="match_parent"
-                    android:layout_margin="16dp"
-                    android:background="@color/black"
-                    android:elevation="8dp"
-                    app:cardBackgroundColor="@color/black"
-                    app:cardCornerRadius="8dp"
-                    app:cardElevation="2dp">
-
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/food1" />
-
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/offCard6"
-                    android:layout_width="250dp"
-                    android:layout_height="match_parent"
-                    android:layout_margin="16dp"
-                    android:background="@color/black"
-                    android:elevation="8dp"
-                    app:cardBackgroundColor="@color/black"
-                    app:cardCornerRadius="8dp"
-                    app:cardElevation="2dp">
-
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/food2" />
-
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/offCard7"
-                    android:layout_width="250dp"
-                    android:layout_height="match_parent"
-                    android:layout_margin="16dp"
-                    android:background="@color/black"
-                    android:elevation="8dp"
-                    app:cardBackgroundColor="@color/black"
-                    app:cardCornerRadius="8dp"
-                    app:cardElevation="2dp">
-
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/food3" />
-
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/offCard8"
-                    android:layout_width="250dp"
-                    android:layout_height="match_parent"
-                    android:layout_margin="16dp"
-                    android:background="@color/black"
-                    android:elevation="8dp"
-                    app:cardBackgroundColor="@color/black"
-                    app:cardCornerRadius="8dp"
-                    app:cardElevation="2dp">
-
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/food4" />
-
-                </androidx.cardview.widget.CardView>
-
-            </LinearLayout>
-
-        </GridLayout>
-    </HorizontalScrollView>
+                    android:layout_height="150dp"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/food1" />
+            </androidx.cardview.widget.CardView>
 </RelativeLayout>
